feat: configuring enemyClass